Fixed scrollbars

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ nav {
     color: white;
     display: flex;
     vertical-align: center;
+    height: 16vh;
 }
 
 nav a {
@@ -55,7 +56,7 @@ img {
     position: absolute;
     float: left;
     width: 45%;
-    height: 100vh;
+    height: 83vh;
     border-right: 2px solid #111;
     z-index: 2;
 }
@@ -121,7 +122,7 @@ img {
     width: 100%;
     overflow-y:scroll;
     position: absolute;
-    height: 100%;
+    height: 84%;
 }
 
 #classtable .classInfo {
@@ -155,7 +156,7 @@ img {
     position: absolute;
     float: right;
     width: 55%;
-    height: 100vh;
+    height: 83vh;
     margin-left: 45%;
     background-color: #eee;
     z-index: 1;
